# ALogger

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  IostreamsLock.cpp  IostreamsLock.hpp  Utilities.hpp  main.cpp
include/: CurrentLogger.hpp  LogsListener.hpp  Stream.hpp  SystemTools.h
include/Loggers/: AbstractLogger.hpp  AsyncLogger.hpp  BasicLogger.hpp
src/: CurrentLogger.cpp  Stream.cpp  SystemTools.cpp
src/Loggers/: AbstractLogger.cpp  AsyncLogger.cpp  BasicLogger.cpp
tests/: CMakeLists.txt  main.cpp
